--- a/style.css
+++ b/style.css
@@ -41,11 +41,16 @@
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-back 0.3s forwards;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.4s forwards;
+}
+
+#switch button:hover{
+  outline: 8px solid var(--highlight-color);
 }
 #switch span {
   display: block;
@@ -145,4 +150,21 @@ footer {
   text-align: center;
   padding: 24px 0px;
   font-size: 16px;
+}
+
+@keyframes slide-in{
+  from{
+    left: 0;
+  }
+  to{
+    left: 50%;
+  }
+}
+
+@keyframes slide-back{
+  from{
+    left: 50%;
+  }to{
+    left: 0;
+  }
 }
